added filter and change category

--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -4,6 +4,11 @@
   ul {
     display: flex;
 
+    @media (max-width: 1225px) {
+       flex-wrap: wrap;
+       gap: 10px;
+    }
+
     li {
       background-color: #f9f9f9;
       padding: 13px 30px;
