--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,12 +1,13 @@
-@import '../variables';;
+@import '../variables';
 
 .pizza-block {
   width: 280px;
   text-align: center;
   margin-bottom: 65px;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
+  &-wrapper {
+    display: flex;
+    justify-content: center;
   }
 
   &__image {
@@ -15,7 +16,7 @@
 
   &__title {
     font-size: 20px;
-    font-weight: 900;
+    font-weight: 700;
     letter-spacing: 1%;
     margin-bottom: 20px;
   }
